istio-files/destination-rule-backend-v1-v2-mtls.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
spec:
  host: backend
  trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      tls:
        mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      app: backend
      version: v1   
  - name: v2
    labels:
      app: backend
      version: v2
