istio-files/destination-rule-frontend-v1-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
  subsets:
  - name: v1
    labels:
      app: frontend
      version: 1.0.0
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: v2
    labels:
      app: frontend
      version: 2.0.0
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
