istio-files/virtual-service-frontend.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - '*'
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        host: frontend
